更新马原毛概期末md

--- a/马原/马原.md
+++ b/马原/马原.md
@@ -598,6 +598,149 @@
 
 ![image-20231217160505337](https://img-blog.csdnimg.cn/direct/060417f62e46484c80c917963ddce46c.png)
 
+1.物质及其存在方式
+
+* 物质的根本属性：**运动**
+  * 运动是标志一切事物和现象的变化及其过程的哲学范畴
+  * 物质和运动不可分割，运动是物质的运动，物质是运动着的物质
+  * 物质的运动是绝对的，而这过程中又存在某种相对静止
+  * 运动和静止相互依赖，互相渗透，互相包含，无条件的绝对运动和有条件的相对静止构成了**对立统一的关系**
+
+* 运动着的物质的基本存在形式：**时间和空间**
+  * 时间是指物质运动的持续性，顺序性，特点是一维性。即时间的流逝一去不复返
+  * 空间是指物质运动的广延性，伸张性，特点是三维性，即空间具有长、宽、高三方面的规定性
+
+2.马克思主义的物质观
+
+* 坚持了唯物主义一元论，同唯心主义一元论和二元论划清了界限
+* 坚持了能动的反映论和可知论，批判了不可知论
+* 体现了唯物论和辩证法的统一，克服了形而上学唯物主义的缺陷
+* 体现了唯物主义自然观与唯物主义历史观的统一，为彻底的唯物主义奠定了理论基础
+
+3.物质和意识的辩证关系
+
+* 物质决定意识，意识对物质的反作用
+
+  * **意识是客观世界的主观映像，物质对意识的决定作用表现在意识的起源、本质和作用上**
+
+    * 从意识的起源：意识不仅是自然界长期发展的产物，而且是社会历史发展的产物
+    * 从意识的本质：意识是人脑这样一种特殊物质的机能和属性，是客观世界的主观映像
+    * 从意识的能动作用来看：
+      * 意识具**有目的性和计划性**。人的整个实践过程，就是围绕意识活动所构建的目标和蓝图进行的
+      * 意识具**有创造性**
+      * 意识具**有指导实践改造客观世界的作用**
+      * 意识具**有调控人的行为和生理活动的作用**
+
+    ![image-20231219213537526](https://img-blog.csdnimg.cn/direct/f24492b8d85449c897b2514064eccb9f.png)
+
+4.主观能动和客观规律的辩证统一
+
+* 处理好主观能动性和客观规律性的关系是正确认识和把握物质与意识的辩证关系的前提
+  * 尊重客观规律是充分发挥主观能动性的前提
+  * 只有充分发挥主观能动性，才能争取认识和利用客观规律
+  * 客观规律与主观能动性统一的基础是**实践**
+* 正确发挥人的主观能动性，有以下三个方面的前提和条件：
+  * 从实际出发是正确发挥人的主观能动性的前提
+  * **实践**是正确发挥人的主观能动性的前提
+  * 一切物质条件和物质手段
+
+5.世界的物质统一性
+
+* 世界的物质统一性在于它的**物质性**，**世界统一于物质**
+  * 世界统一于物质的表现
+    * 自然界是物质的
+    * 人类社会本质上也是物质的
+    * 人的意识统一于物质
+  * 世界统一于物质的**原理的意义**
+    * **世界的物质统一性原理是辩证唯物主义最基本、最核心的观点，是马克思主义的基石**
+    * 有助于我们确立正确的思想路线和思想方法，在认识世界和改造世界的过程中，遵循一切从实际出发，实事求是的原则
+
+7.事物的联系与发展
+
+* 联系的特点
+  * 客观性
+  * 普遍性
+  * 多样性
+  * 条件性
+
+* 事物的发展变化
+  * 发展的实质是新事物的产生和旧事物的灭亡
+
+6.==对立统一规律==
+
+* 对立统一规律是**唯物辩证法的实质和核心**，提供了矛盾分析方法，这是人们认识改造世界的根本方法
+
+* 矛盾的同一性和斗争性在事物发展中的作用
+
+  * 矛盾的同一性
+    * 指矛盾着的对立面**相互依存、相互贯通**的性质和趋势，有两方面含义
+      * 矛盾着的对立面相互依存，互为存在的前提，并处于一个统一体中
+      * 矛盾着的对立面相互贯通，在一定条件下可以相互转化
+  * 矛盾的斗争性
+    * 指矛盾着的对立面**相互排斥，相互分离**的性质和趋势
+    * 由于矛盾的性质不同，矛盾的斗争性也不同，可以分为对抗性矛盾和非对抗性矛盾
+
+* 二者关系
+
+  * 矛盾的同一性和斗争性**相互联结、相辅相成**
+  * **没有斗争性就没有同一性，没有同一性也没有斗争性。斗争性寓于同一性中，同一性通过斗争性表现出来**
+  * 矛盾的**同一性是有条件的，相对的**；矛盾的**斗争性是无条件的，绝对的**
+  * 两者相结合，构成了事物的矛盾运动，推动着事物的变化发展
+
+* 二者作用
+
+  ![image-20231219221022017](https://img-blog.csdnimg.cn/direct/707e3f7d10764507a5f6c831d8a1ef7c.png)
+
+7.==量变质变规律==
+
+* 质：事物区别于其他事物的内在规定性
+* 量：事物的规模、程度、速度等用数量关系表示的规定性
+* 度：报纸事物质稳定性的数量界限
+* 质变与量变
+  * 量变是保持事物稳定性的不显著变化，体现了事物发展渐进过程的连续性
+  * 质变是事物性质的根本变化 ，是事物由一种质态向另一种质态的飞跃，体现了事物发展渐进过程和连续性的中断
+* 两者的**辩证关系**
+  * 量变是质变的必要准备
+  * 质变是量变的必然结果，并为新的量变开辟道路
+  * 质变和质变相互渗透
+    * 总的量变过程中也有阶段性和局部性的部分质变
+    * 在质变过程中也有旧质在量上的收缩和新质在量上的扩张
+    * 质变量变是**相互依存、相互贯通的**。量变质变规律体现了事物发展的渐进性和飞跃性的统一
+
+8.==否定之否定规律==
+
+* 含义
+
+  ![image-20231219223000863](https://img-blog.csdnimg.cn/direct/273da076d07e4851b50a68177d4913d0.png)
+
+* 辩证否定观的基本内容
+
+  * 否定是事物的**自我否定**、自我发展，是事物内部矛盾运动的结果
+  * 否定是**事物发展的环节**，是旧事物向新事物转变，旧质到新质的飞跃，只有经过否定，旧事物才能向新事物转变
+  * 否定是新旧事物联系的环节
+  * 辩证否定的实质是**“扬弃”**，即新事物对旧事物的既批判又继承，既克服其消极因素又保留其积极因素
+
+* 辩证发展的三个阶段
+
+  * 肯定-否定-否定之否定
+  * 第一次否定使得问题初步解决，但仍具有片面性，还要经过再次否定，实现对立面的统一，使矛盾得到根本解决
+  * 事物的发展呈现出周期性，不同周期的交替使事物发展呈现波浪式前进或螺旋式上升的总趋势
+
+* 指导意义：
+
+  * 树立辩证的否定观，反对形而上学的肯定或否定一切。采取科学分析的方法
+  * **既要看到道路的曲折，更要看到前途的光明**
+
+9.唯物辩证法的本质特征和认识功能
+
+* 本质：
+  * 批判的、革命的
+* 唯物辩证法是客观辩证法与主观辩证法的统一
+  * 客观辩证法是指客观事物或客观存在的辩证法，采取外部必然性形式
+  * 主观辩证法是指人类认识和思维运动的辩证法，采取主观的、逻辑的形式
+
+
+
 
 
 
