新增毛概马原知识点总结

--- a/毛概/毛概期末.md
+++ b/毛概/毛概期末.md
@@ -1,5 +1,7 @@
 # 毛概期末
 
+![2580528890f2855adb2fdbdd5fb52d6](https://img-blog.csdnimg.cn/direct/74e3189d74274c28b32158a4e7388df7.png)
+
 ## 导论 马克思主义中国化时代化
 
 1.马克思主义中国化的提出
@@ -244,9 +246,162 @@
   * **第一次对中国特色社会主义理论的主要内容做了系统概括**
   * 标志着邓小平理论轮廓的形成
 
+4.三个代表的内在联系
+
+* **关键在于坚持与时俱进**
+* **核心在于坚持党的先进性**
+* **本质在于坚持执政为民**
+
+5.中国特色社会主义体系在新时代新篇章(历史地位)
+
+* 是中国共产党长期探索的伟大理论创造，同马克思列宁主义，毛泽东思想一脉相承又与时俱进，是马克思主义中国化的重大理论成果
+* 是全党全国各族人民团结奋斗的共同思想基础，是战胜来自政治，经济、社会和自然界等一切风险和挑战的精神支柱，是坚持和发展中国特色社会主义的行动指南，是全面推进中华民族伟大复兴的行动指南
+
+## 第六章 邓小平理论
+
+1.社会主义本质的提出和内容(1992)
+
+* 1992年邓小平在南方谈话中指出：
+  * **社会主义本质**是解放生产力，发展生产力，消灭剥削，消除两极分化，最终达到共同富裕
+* 内容
+  * 它突出强调了解放和发展生茶里在社会主义社会发展的重要地位，纠正了过去关于发展生产力的一些错误观念
+  * 它突出强调了消灭剥削，消除两极分化，最终达到共同富裕
+
+2.邓小平理论精髓（解放思想和实事求是的**辩证统一**）
+
+* **解放思想，实事求是**
+* 只有解放思想才能达到实事求是，只有实事求是惨呢是真正的解放思想
+* 解放思想包含两种情况
+  * 对原先认识的事情再认识，对正确的坚持和对错误的纠正
+  * 研究新情况，解决新问题，总结新经验，形成新的正确认识
+* 解放思想，就是使思想和实际符合，是主观和客观符合，就是实事求是
+
+3.初级阶段理论的提出
+
+* 党的十三大，邓小平提出，中国处于社会主义初级阶段，而社会主义是共产主义的初级阶段
+* **十三大阐述了社会主义初级阶段的科学内涵**
+  * 社会主义初级阶段包括两层含义
+    * 1.我国已经是社会主义社会，必须全面坚持而不能离开社会主义
+    * 2.我国的社会主义还处在初级阶段，必须从这个实际出发，而不能超越这个阶段
+    * 前者产命令初级阶段的性质，后者阐明了我国社会主义发展程度，；两者不可分割，必须全面把握。两者有机的统一起来，才能深刻地理解和把握我国的基本国情
+* **强调了社会主义初级阶段的长期性**
+  * 我国的社会主义建立在生产力落后，商品经济不发达的条件下的，脱胎于双半社会，这就决定了我国需要经历一个很长的初级阶段
+* 阐述了社会主义初级阶段的基本特征
+  * 我国社会主义初级阶段，既不同于社会主义经济基础尚未奠定的过渡时期，又不同于已经实现 社会主义现代化的阶段
+  * 这一阶段是逐步摆脱贫穷、拜托落后的阶段
+
+4.党在**社会主义初级阶段的基本路线**(**一个中心两个基本点**)
+
+* **以经济建设为中心，坚持四项基本原则，坚持改革开放**，自力更生，艰苦创业，尾巴我国建设成为富强、民主、文明的社会主义现代化国家奋斗
+* 四项基本原则：
+  * 坚持社会主义道路
+  * 坚持人民民主专政
+  * 坚持共产党的领导
+  * 坚持马克思列宁主义、毛泽东思想
+
+5.改革开放的三个有利于标准
+
+* 是否有利于发展社会主义社会的生产力
+* 是否有利于增强社会主义国家的综合国力
+* 是否有利于提高人民生活水平
+
+
+
+6.社会主义市场经济理论(时间点、过程)
+
+* 时间点(主角都是邓小平)
+  * **1981年，党的十一届六中**全会提出"计划经济为主，市场经济为辅"的方针，**为形成社会主义市场经济理论开辟了道路**
+  * **1984年，党的十二届三中全会**，不再把计划经济同商品经济对立起来，这是社会主义市场经济理论的重大突破
+  * **1987年，党的十三大，“国家调节市场，市场引导企业”**，表名党从理论到实践对社会主义市场经济的认识越来越深
+  * **1992年，南方谈话：**“市场多一点还是计划多一点，不是社会主义和资本主义的本质区别”，这一精辟论述**从理论上突破了计划经济和市场经济是制度属性的观念**，==**标志着邓小平的社会主义市场经济理论的形成**==。为十四大明确把建立社会主义市场经济体制作为我国经济体制改革的目标奠定了理论基础
+
+
+
+## 第七章 三个代表重要思想(江泽民)
+
+1.三个代表的核心观点
+
+* 始终代表中国先进生产力的发展要求
+* 始终代表中国先进文化的前进方向
+* 始终代表中国最广大人名的根本利益
+
+2.先进生产力的集中体现和主要标志
+
+* **科学技术是第一生产力**，是先进生产力的集中体现和主要标志
+
+3.三个代表的重要思想的主要内容
+
+* **发展是党执政兴国的第一要务**
+  * why？
+    * 中国特色社会主义是靠发展来不断巩固和推进的
+    * 发展是国际竞争中赢得主动的需要
+    * 用发展的办法解决前进中的问题，是改革开放以来我们的一条重要经验
+    * 发展是硬道理，中国解决所有问题的关键在于依靠自己的发展
+* **建立社会主义市场经济体制**
+  * 明确提出：**1992年，党的十四大**，江泽民
+  * 建立社会主义市场经济体制，必须坚持和完善**公有制为主体、多种所有制经济共同发展**的社会主义基本经济制度
+  * 一方面，必须毫不动摇地巩固和发展公有制经济；另一方面，必须毫不动摇地鼓励、支持和引导非公有制经济发展
+* **全面建设小康社会**
+* **建设社会主义政治文明**
+  * 建设社会主义政治文明，是我国改革开放和社会主义现代化建设发展的必然要求
+  * 是社会主义现代化建设的重要目标
+
+* **实施"引进来"和"走出去"相结合的对外开放战略**
+* **推进党的建设新的伟大工程**
+  * 重点：
+    * **加强党的执政能力**。要不断提高科学判断形势的能力、驾驭市场经济的能力、应对复杂局面的能力，坚持党要管党、从严治党
 
 
 
 
 
+4.党领导人民治国的基本方略
 
+* **依法治国**是党领导人民治国的基本方略
+* 依法治国，计时广大人民群众在党的领导下，依照宪法和法律规定，通过各种途径和形式管理国家事务，管理经济文化事业，管理社会事务。保证国家各项工作都依法进行，逐步实现社会主义民主的制度化、法律化，使这种制度和法律不因领导人的改变而改变
+
+ 
+
+---
+
+## 第八章 科学发展观(胡锦涛)
+
+1.科学发展观**第一次提出**
+
+* **2003年，党的十六届三中全会**，胡锦涛
+
+2.科学发展观的**科学内涵**
+
+* 所谋求的发展必须是讲求质量和效益的发展，必须是以人为本、全面可协调的发展
+* 既要关注发展规模和速度，又要注重发展质量和收益；既要关注社会财富创造和涌流，又要注重社会利益分配和调整
+* 坚持科学发展，必须加快转变经济发展的方式
+* 坚持科学发展，必须推动科学技术跨越式发展
+* 坚持科学发展，必须培养高素质创新型人才
+* 坚持科学发展，必须善于抓住和用好机遇
+
+
+
+**3.以人为本是科学发展观的核心立场** why
+
+* 集中体现了马克思主义的基本原理，体现了我们党全心全意为人民服务的根本宗旨和推动经济社会发展的根本目的，是社会主义的本质特征
+* 以人为本，继承了中国古代的民本思想，但又与它存在着实质上的区别。
+  * 中国古代民本思想本质是维护封建统治者的统治地位，是唯心主义。以人为本坚持了历史唯物主义的基本立场和基本观点，坚持把人民的利益放在首位，体现了我们党立党为公，执政为民的执政理念
+* 以人为本，是我们党的根本宗旨和执政理念的集中体现
+* 人民群众是历史的创造者，是推动社会发展的决定性力量；人民群众是生产力中最活跃、最革命的因素，创造了社会的物质财富和精神财富
+* 中国共产党把全心全意为人民服务作为自己的根本宗旨，始终坚持人民的利益高于一切
+
+
+
+4.社会主义核心价值体系
+
+* 社会主义核心价值体系是**兴国之魂**，决定着中国特色社会主义发展方向
+* 坚持不懈用中国特色社会主义理论体系武装全党、教育人民，广泛开展理想信念教育，把广大热敏团结凝聚在中国特色社会主义伟大的旗帜之下
+* 加强新闻宣传工作。舆论引导正确，利党利国利民
+
+
+
+5.构建和谐社会(如何保障、改善民生)
+
+* 
+
+ 
