--- a/马原/马原.md
+++ b/马原/马原.md
@@ -542,6 +542,8 @@
 
 ![f568d8995f74fbbb8d1cfb16768c627](https://img-blog.csdnimg.cn/direct/5e01de82040d491ea16f8e0b8bf6ee0f.png)
 
+---
+
 ### ==导论==4选择、1判断
 
 ![image-20231217145442814](https://img-blog.csdnimg.cn/direct/0deb6c4ca79d4121ae741c14a03f5fa0.png)
@@ -594,7 +596,7 @@
   * **引领人类社会进步的科学真理**
   * ![image-20231217152524745](https://img-blog.csdnimg.cn/direct/40b7329623054f60b4507e1436710355.png)
 
-### ==第一章 世界的物质性及发展规律==12选择、3判断
+### ==第一章== 世界的物质性及发展规律12选择、3判断
 
 ![image-20231217160505337](https://img-blog.csdnimg.cn/direct/060417f62e46484c80c917963ddce46c.png)
 
@@ -611,6 +613,8 @@
   * 空间是指物质运动的广延性，伸张性，特点是三维性，即空间具有长、宽、高三方面的规定性
 
 2.马克思主义的物质观
+
+* 世界是物质的世界，物质是第一性，物质不依赖于人类意识而存在，并能为人类的意识所反映的客观存在
 
 * 坚持了唯物主义一元论，同唯心主义一元论和二元论划清了界限
 * 坚持了能动的反映论和可知论，批判了不可知论
@@ -734,20 +738,194 @@
 9.唯物辩证法的本质特征和认识功能
 
 * 本质：
-  * 批判的、革命的
+  * **批判的、革命的**
 * 唯物辩证法是客观辩证法与主观辩证法的统一
   * 客观辩证法是指客观事物或客观存在的辩证法，采取外部必然性形式
   * 主观辩证法是指人类认识和思维运动的辩证法，采取主观的、逻辑的形式
 
+10.辩证思维的方法与现代科学思维方法
+
+* 辩证思维的方法
+
+  * 归纳与演绎
+
+  * 分析与综合
+
+  * 抽象与具体
+
+  * 逻辑与历史相统一
+
+* 现代科学思维方法
+
+  * 现代科学思维方法主要包括控制、信息、系统、模型、理想化方法
+  * 两者在方法论上有共性，二者相互联系、相互补充
+  * 现代科学思维方法论前提是辩证思维，现代科学思维方法论丰富了辩证思维方法，以其为指导
+
+ 
 
 
 
 
 
+---
+
+### ==第二章== 实践与认识 8选择、2判断
+
+![image-20231220171112753](https://img-blog.csdnimg.cn/direct/f34548a9c30b492184d83973a9f42c6b.png)
+
+![image-20231220171151934](https://img-blog.csdnimg.cn/direct/b317964c660e494ab03864c864a850c2.png)
+
+1.实践的本质和特征
+
+* 本质：实践的**本质是人类能动地改造世界的社会性的物质活动**
+
+* 特征：
+
+  * **客观实在性**
+    * 构成实践的要素都是可感知的，客观实在
+    * 实践的水平、广度和深度和发展过程都受客观条件的制约和客观规律的制约
+    * 实践能引起客观世界的某种变化，可以把人脑中观念的存在变为现实的存在
+  * **自觉能动性**
+    * 人的实践活动是一种有意识、有目的的活动。目的性是能动性的主要表现，目的在实践者头脑中以观念的形式存在着，目的决定着实践者的行为
+  * **社会历史性**
+    * 实践从一开始就是社会性的活动。作为实践主体的人总是处在一定社会关系中，任何人的活动都离不开与社会的联系。实践的社会性决定了它的历史性
+    * 实践的内容、水平、性质和范围都受到一定社会历史条件的制约，随着一定社会历史条件的变化而变化，因此，实践是历史的发展着的实践
+
+  
+
+2.实践的基本结构
+
+* 实践主体：
+  * **具有一定主体能力、从事现实社会实践活动的人**
+* 实践客体：
+  * **是指实现互动所指向的对象**，实践客体与客观存在的事物不完全等同，客观事物在被纳入实践活动范围内，为主体实践活动所指向并且相互作用时才成为现实的实践客体
+* 实践中介：
+  * 指各种形式的工具、手段以及运用操作这些工具手段的方法
+
+* 实践主体和客体的关系：
+  * 实践和认识的主客体本质上是一样的
+  * 认识的主客体的关系首先是改造和被改造，其次才是认识和被认识
+  * 主体认识客体，也是主体改造客体的过程
+
+* 主体客体化和客体主体化
+
+  ![image-20231220173351838](https://img-blog.csdnimg.cn/direct/46f11f702d6f4407bc59bd1edcbd67d3.png)
 
 
 
-### 第二章 实践与认识 8选择、2判断
+3.实践对认识的决定作用
+
+* **实践是认识的来源**
+  * 认识的内容是在实践活动的基础上产生和发展的。只有通过实践实际的改造和变革对象，才能准备把握对象的属性、本质和规律
+* **实践是认识发展的动力**
+  * 实践的需要推动认识的产生和发展。实践的需要是推动认识你在深度和广度上发展之根本
+  * 实践为认识的发展提供了手段和条件
+  * 实践改造了人的主观世界，锻炼和提高了人的认识能力
+* **实践是认识的目的**
+  * 通过实践获得认识，其最终目的是为实践服务，指导实践，以满足人们生活和生产的需要
+* **实践是检验真理的唯一标准**
+  * 认识是否有真理性，既不能从认识本身得到证实，也不能从认识对象中得到回答，只有在实践中才能得到验证
+
+4.认识的本质与过程
+
+* 认识的本质：
+
+  ![image-20231220194208613](https://img-blog.csdnimg.cn/direct/e19a3bac091c4ab9bf7cec2abb98afac.png)
+
+* 旧唯物主义认识论存在的缺陷：
+
+  * **离开实践思考问题**，因而不了解实践对认识的决定作用
+  * **不了解认识的辩证本性**，看不到主观和客观之间的矛盾及其相互作用，**没有把认识看做一个不断发展的过程**
+
+* 辩证唯物主义的认识论的特点
+
+  * 把**实践**的观点引入认识论
+  * 把**辩证法应用于反映论**考察**认识发展**过程
+
+5.从实践到认识、从认识到实践
+
+* 认识的辩证运动经过从实践到认识和从认识到实践两个基本环节。
+
+* **从实践到认识**
+  * 首先要经过感性认识和理性认识
+  * 感性认识：
+    * 感性认识是人们在实践基础上，由感觉器官直接感受到的关于事物的现象、事物的外部联系、事物的各个方面的认识，包括感觉、知觉和表象
+    * 感性认识具有不深刻的局限性，必须进一步上升到理性认识
+  * 理性认识：
+    * 是指人们借助抽象思维，在整理概括大量感性材料的基础上，达到关于事物的本质、全体、内部联系和事物自身规律性的认识
+    * 作为认识的高级阶段，理性认识具有抽象性和间接性的特点
+  * **二者的辩证统一关系**是在实践的基础上形成的，也需要在实践中发展
+    * 理性认识依赖于感性认识
+    * 感性认识有待于发展和深化成为理性认识
+    * 感性认识和理性认识相互渗透，相互包含
+  * 感性认识上升到理性认识的**两个基本条件**
+    * 投身实践、深入调查，获取十分丰富和合乎逻辑的感性材料
+    * 必须发挥思考的作用，运用理论思维和科学抽象，将丰富的感性材料去粗取精
+* **从认识到实践**
+  * **从认识到实践是认识过程的第二次能动飞跃**
+  * 从认识到实践具有必要性和重要性
+    * 从实践来看，认识世界的目的是改造世界，从感性认识上升到理性认识的第一次飞跃，只有从感性认识上升到理性认识，才能把握事物的本质和规律，满足实践的需要
+    * 从认识来看，认识的真理性只有在实践中才能得到检验和发展。只有将获得的理性认识运用到实践中去，才能检验其正确与否
+
+* **实践-认识-再实践-再认识**，循环往复以至于 无穷的辩证发展过程
+
+  ![image-20231220200823776](https://img-blog.csdnimg.cn/direct/1277ca0e2a1c42199a3752f4e6fa82cc.png)
+
+6.真理的客观性、绝对性和相对性
+
+* 真理的客观性
+  * 真理的内容是对客观事物及其规律的正确反映，真理中包含着不依赖于人和人的意识的客观内容。**客观性是真理的本质属性**
+* 真理的形式是主观的
+  * 真理通过感觉、知觉、表象等主观形式表达出来。真理的主观形式是一切认识所固有的
+
+* 真理的一元性
+  * 在同一条件下对于特定的认识客体的真理性认识只有一个**，真理的客观性决定了真理的一元性**
+
+7.真理的绝对性和相对性
+
+![image-20231220202016307](https://img-blog.csdnimg.cn/direct/6495a284e9b841599dc0e321430d4690.png)
+
+8.真理与谬误
+
+![](https://img-blog.csdnimg.cn/direct/68cd296be9e04be9b19294f89a25ebf8.png)
+
+9.实践是检验真理的唯一标准
+
+* 从真理的本性看
+  * 真理是人们对客观事物及其发展规律的正确反映，它的本性在于**主观和客观相符合**
+* 从实践的特点看
+  * 实践具有直接现实性的特点
+    * 实践能把一定认识、理论变成直接的、现实的
+
+10.真理与价值的辩证统一
+
+* 价值的基本特性
+  * 主体性
+  * 客观性
+  * 多维性
+  * 社会历史性
+
+11.认识世界和改造世界相结合
+
+* 二者含义
+  * 认识世界，就是**主体能动地反映客体**，获得关于事物本质和发展规律的科学知识
+  * 改造世界，就**是人类按照有利于自己生存和发展的需求**，改变事物的现存形式，创造自己的理想世界和生活方式
+* 二者关系
+  * 相互依赖、相互制约的辩证统一关系
+  * 认识世界有助于改造世界，**正确认识世界是有效改造世界的必要前提**
+  * 人们只有在改造世界的实践中才能不断地深化、拓展对世界的正确认识。**认识世界和改造世界的统一，决定了理论与实践必须相结合**
+* 认识世界和改造世界是一个矛盾的过程
+* ![image-20231220211207833](https://img-blog.csdnimg.cn/direct/e44546c1dc784ff8937a314f24475401.png)
+
+12.改造客观世界和改造主观世界的辩证关系
+
+![image-20231220211318155](https://img-blog.csdnimg.cn/direct/fd9325c848fc44a79de0e17581987dfa.png)
+
+* 认识世界和改造世界的过程是从必然走向自由的过程
+
+  ![image-20231220212246377](https://img-blog.csdnimg.cn/direct/0358ec3f30f841619d62560d1919df9b.png)
+
+
 
 ### 第三章 人类社会及其发展规律 8选择、2判断
 
