新增马原毛概期末总结

--- a/马原/马原.md
+++ b/马原/马原.md
@@ -927,11 +927,399 @@
 
 
 
-### 第三章 人类社会及其发展规律 8选择、2判断
+### ==第三章== 人类社会及其发展规律 8选择、2判断
 
-### 第四章 资本足以的本质及规律 8选择、2判断
+![image-20231221093523230](https://img-blog.csdnimg.cn/direct/fcde100be4d940bf90842321fd1faaa0.png)
+
+![image-20231221093531169](https://img-blog.csdnimg.cn/direct/8c525849397f49778463fd50bd99c436.png)
+
+1.社会存在与社会意识
+
+* 社会存在
+
+  * **社会存在是指物质生活条件**，主要包括
+    * **自然地理环境**
+      * 人类生存和发展的永恒的、必要的条件
+    * **人口因素**
+      * 对社会发展有制约和影响作用
+    * **物质生产方式**
+      * 是社会存在和发展的基础及决定力量
+  * ![image-20231221094220299](https://img-blog.csdnimg.cn/direct/bfe56e410b284d02b528237ab8b86776.png)
+
+* 社会意识
+
+  * 社会意识结构
+    * 按主体分
+      * 个体意识
+      * 群体意识
+    * 按层次分
+      * 社会心理
+      * 社会意识形式
+
+  ![image-20231221094619936](https://img-blog.csdnimg.cn/direct/59a19481a75448248130f8e02a64fc4c.png)
+
+* 社会意识形态
+
+  * ![image-20231221094732588](https://img-blog.csdnimg.cn/direct/7cf36008b426447fb032313f07cbed1f.png)
+
+  * 从**社会意识**与**意识形态**既相联系又有区别的关系来看，社会意识形态既有作为社会意识的一般特征，又有自己的显著特征。
+
+    * 第一， 社会意识形态同整个社会意识一样，依赖于社会存在。
+    * 第二，社会意识形态具有鲜明的阶级性。
+    * 第三，社会意识形态同整个社会意识一 
+
+    样，具有相对独立性。 
+
+2.社会存在和社会意识的辩证关系
+
+* **社会存在决定社会意识**
+  * 社会存在是社会意识内容的**客观来源**，社会意识是社会物质生活过程及其条件的**主观反映**。**社会意识根源于社会存在**，是对**以实践为基础**的不断变化发展的现实世界的反应
+  * 社会意识是人们不断进行社会物质交往的产物
+  * 社会意识是具体的、历史的
+* **社会意识有相对独立性**
+  * 社会意识与社会存在发展的不完全同步性和不平衡性
+  * 社会意识内部各种形式之间相互影响及各自具有的历史继承性
+  * 社会意识对社会存在具有能动的反作用
+
+3.社会存在和社会意识辩证关系的重要意义
+
+* 理论意义：
+  * 唯物史观认为：社会存在决定社会意识，社会意识能动地反作用于社会存在
+  * 不仅在人力思想史上**第一次正确的回答了社会历史基本问题，而且宣告了唯心史观的彻底破产，解释了人类社会发展的规律**
+* 实践意义：
+  * 对于社会发展包括社会文化建设具有重要指导意义。对于社会发展的重要作用表现在：
+    * 文化为社会发展提供思想保证
+    * 文化为社会发展提供精神动力
+    * 文化为社会发展提供智力支持
+    * 文化为社会发展提供凝聚力量
 
 
+
+4.社会基本矛盾及其运动规律
+
+* 人类社会的**基本矛盾**
+
+  * **生产力与生产关系、经济基础与上层建筑之间的矛盾**
+
+* **生产力与生产关系的矛盾运动及其规律**
+
+  * 生产力
+
+    * 含义
+
+      * 具有客观历史性和社会历史性
+      * 生产力的水平表现为生产发展的现实程度
+
+      * **科学技术**是先进生产力的集中体现和主要标志，是第一生产力
+
+    * 结构
+      * 生产力的基本要素
+        * 劳动资料
+        * 劳动对象
+        * 劳动者
+        * 科学技术是生产力的重要因素，是第一生产力
+
+  * 生产关系
+
+    * 含义
+      * 生产关系是人们在物质生产过程中形成的**不以人的意志力为转移的经济关系**
+      * **是社会关系中最基本的关系**，政治关系、家庭关系等其他社会关系都要受生产关系的支配和制约
+    * 类型
+      * 以生产资料公有制为基础的生产关系
+      * 以生产资料私有制为基础的生产关系
+
+  * 生产关系作为一种社会关系，具有其自身的特征。
+
+    * 第一，生产关系形成于人类的生产实践活动之中，是人们的物质生产活动以及个体活动所借以实现的形式，实际上是人的本质力量的社会实现形式。
+    * 第二，生产关系是生产力的社会存在形式，具有相对的稳定性。
+    * 第三，生产关系是一种客观的经济关系，具有客观性
+
+* **经济基础与上层建筑之间的矛盾及其规律**
+
+  * 经济基础
+    * 定义：由社会一定发展阶段的生产力所决定的**生产关系的总和**
+    * 特点：
+      * 社会一定发展阶段上往往存在多种生产关系，但决定一个社会性质的是占其支配地位的生产关系
+      * 经济基础与经济体制具有内在联系
+  * 上层建筑
+    * 定义：上层建筑是建立在一定经济基础之上的**意识形态以及与之相适应的制度、组织和设施**
+    * 结构：
+      * 意识形态又称为观念上层建筑，包括政治法律思想、道德、艺术、宗教、哲学等思想观点
+      * ....
+  * 国家
+    * 起源：国参是阶级矛盾不可调和的产物，是社会发展到一定历史阶段的产物
+    * 实质：国家的实质是一个阶级通知另一个阶级的工具
+
+  ![image-20231221104825800](https://img-blog.csdnimg.cn/direct/e4fd0cd9e986439b92db0d18caa8e80c.png)
+
+* 上层建筑一定要适合经济基础状况的规律
+
+![image-20231221104859948](https://img-blog.csdnimg.cn/direct/13c21547c56f42a882ea6ded251379c7.png)
+
+
+
+5.生产力和生产关系的辩证关系
+
+* **生产力决定生产关系**
+
+  * **生产力状况决定生产关系的性质**，是生产关系形成的客观前提和物质基础
+  * **生产力的发展决定生产关系的变化**，当生产关系不能适应生产力的发展要求时，就要变革旧的生产关系，建立新的生产关系以适应新的生产力
+
+* 生产关系对生产力的能动的反作用
+
+  * 当生产关系适合生产力发展的客观要求时，对生产力的发展起推动作用
+  * 当生产关系不适合生产力发展的客观要求时，就会阻碍生产力的发展
+  * 生产关系对生产力的反作用还是由生产力决定的。反作用的性质也是取决于它首付适合生产力的状况
+
+* 生产关系一定要适合生产力状况的规律
+
+  ![image-20231221103843482](https://img-blog.csdnimg.cn/direct/bdb1b8baf6b64d05ab2ce2789f43e90b.png)
+
+**6.社会形态更替的一般规律及其特殊形式**
+
+* 社会形态的内涵
+  * 社会形态是关于社会运动的具体形式、发展阶段和不通质态的范畴，是同生产力发展到一定阶段相适应的经济基础和上层建筑的统一体
+  * 社会形态包括社会的经济形态、政治形态和意识形态，是三者具体的、历史的统一
+  * 一定的社会形态总要以一定的社会制度形式呈现出来
+* 社会形态更替的统一性和多样性
+  * 统一性：一句生产关系的不同性质，社会历史可划分为五种社会形态：
+    * 原始社会、奴隶社会、封建社会、资本主义社会和社会主义社会
+  * 多样性：就某一国家或民族的社会发展历程而言，情况不同，体现了社会形态更替形式的多样性
+  * 统一性和多样性是辩证统一的
+
+![image-20231221110405280](https://img-blog.csdnimg.cn/direct/f2d553746e08433384164e5c97e4d76a.png)
+
+* 社会形态更替的必然性与人们的历史选择性
+  * 客观必然性主要是是指社会形态一次更替的过程和规律是客观的
+  * 生产力的发展具有最终决定意义
+  * 历史选择性包含三层意思
+    * 社会发展的客观必然性造成了一定历史阶段社会发展的基本趋势，为人们的历史选择提供基础、饭盒和可能性空间
+    * 社会形态更替的过程也是一个主观能动性与客观规律性相统一的过程
+    * 人们的历史归根结底是人民群众的选择
+* 社会形态更替的前进性与曲折性
+  * 社会形态更替表现为历史的前进性与曲折性、顺序性与跨越性的统一
+    * 前进性与曲折性主要是指五种社会形态依次演进的基本趋势，其历史过程是“扬弃”的过程，并不否认历史发展的曲折性和跨越性
+
+![image-20231221112059148](https://img-blog.csdnimg.cn/direct/8daf7e596d1c462a8b2f8fd46ae50480.png)
+
+
+
+7.社会基本矛盾在历史发展中的作用
+
+* **社会基本矛盾是历史发展的根本动力**
+  * 生产力是社会基本矛盾运动中最基本的动力因素，是人类社会发展和进步的最终决定力量
+  * 社会基本矛盾特别是生产力和生产关系的矛盾，是一切历史冲突的根源，决定着社会中其他矛盾的存在和发展
+  * 社会基本矛盾有不同的表现形式和解决方式，并从根本上影响和促进社会形态的变化发发展
+
+* 社会主要矛盾在历史发展中的作用
+
+  ![image-20231221113516576](E:\Typora\pictures\image-20231221113516576.png)
+
+
+
+**8.人民群众是历史的创造者**
+
+* 两种历史观在历史创造者问题上对立
+  * 唯心史观(英雄史观)
+    * 抹杀人民群众的历史作用，宣扬少数英雄人物创造历史
+  * 唯物史观(群众史观)
+    * 创造历史的是人民群众
+      * 把人类总体当做历史主体来理解时，无疑应该肯定总体的人在总体的历史过程中的主体地位
+* 人民群众在创造历史的过程中的**决定作用**
+  * 人民群众的含义
+    * 从质上看，人民群众是指一切对社会历史发展起推动作用的人
+    * 从量上看，人民群众是指社会人口中的绝大多数，包含着不同的阶级，阶层和集团，最稳定的主体还是**劳动群众**
+  * 人民群众的作用
+    * 人民群众是社会**物质财富的创造者**
+    * 人民群众是社会**精神财富的创造者**
+    * 人民群众是**社会变革的决定力量**
+  * 人民群众创造历史的活动受到一定社会历史条件的制约
+    * **经济条件**对于人民群众创造历史的活动有着首要的、决定性的影响。政治条件也有直接影响
+  * 以人民为中心的思想
+    * 坚持以人民为中心思想，鲜明地体现了马克思主义政党的政治立场和执政理念，体现了共产党人的价值取向和工作导向
+    * 坚持以人民为中心思想，站在时代和历史的高度，总觉总结和概括了人民群众在中国特色社会主义实践中的伟大创造作用和主体地位，深刻阐述了中国共产党作为执政党的历史使命
+
+**9.无产阶级政党的群众路线**
+
+* 群众观点：
+  * 坚信人民群众自己解放自己的观点
+  * 全心全意为人民服务
+  * 一切向人民群众负责的观点
+  * 虚心向人民群众学习的观点
+* 群众路线
+  * 一切为了群众、一切依靠群众。无产阶级政党是广大人民群众利益的最忠实代表，其宗旨就是全心全意为人民服务，为人民谋取最大利益，实现人的全面发展
+  * 从群众中来，到群众中去。领导和群众相结合，群众的意见能够及时反映
+  * 群众路线是我们党在革命、建设、改革时期不断取得胜利的重要法宝
+
+10.群众、阶级、政党、领袖的关系
+
+* 群众是划分为阶级的，阶级通常是由政党领导的，政党是由领袖来主持的
+* 四环节节相扣、相互依存，构成一个有机整体
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+### ==第四章== 资本主义的本质及规律 8选择、2判断
+
+![image-20231221204834577](https://img-blog.csdnimg.cn/direct/73e8f5ee81cd49748982594a81aedcae.png)
+
+![image-20231221204845746](https://img-blog.csdnimg.cn/direct/a3b5c44d6e024833a0623d13ff04d52d.png)
+
+
+
+1.商品经济的形成和发展
+
+* 商品经济的含义：
+
+  * **商品经济是以交换为目的**而进行生产的经济形式，是一定社会历史条件的产物
+
+* 产生的社会历史条件
+
+  * 社会分工的出现
+
+  ![image-20231221205057069](https://img-blog.csdnimg.cn/direct/998f22059cbf481ab346aa2b81898287.png)
+
+2.商品的二因素和劳动的二重性
+
+* 含义：
+  * 商品是用来**交换**、能满足人的某种需要的**劳动产品**，具有**价值**和是**使用价值**两种属性，是价值和使用价值的矛盾统一体
+* 商品的二因素：
+  * 使用价值：
+    * 实质商品能满足人的某种需要的有用性，反应的是**人与自然**的物质关系，**是商品的自然属性**，是一切劳动产品的共有的属性。使用价值构成社会财务的物质承担，是**交换价值的物质承担者**
+  * 价值：
+    * 指凝结在商品中的无差别的一般人类劳动，即**人的脑力和体力的耗费**
+    * 价值**是商品所特有的社会属性**。价值是交换价值的基础，交换价值是价值的表现形式。
+    * 商品的价值在本质上体现的了**生产者之间一定的社会关系**
+* 劳动的二重性
+  * 具体劳动：是指生产一定使用价值的具体的劳动形式。**具体劳动创造了商品的使用价值**
+  * 抽象劳动：是指撇开一切具体形式的、无差别的一般人类劳动**。即人的脑力和体力的耗费。抽象劳动形成商品的价值**
+  * 具体劳动和抽象劳动是同一劳动的两种规定。任何一种劳动，一方面是具体劳动，另一方面又是一般的抽象劳动，这就是劳动二重性。
+  * **劳动的二重性决定商品的二因素**
+* 具体劳动和抽象劳动也是对立统一的关系
+  * 具体劳动和抽象劳动是商品生产者的同一劳动过程中不可分割的两个方面，**二者在时间上和空间上是统一的**
+  * 具体劳动与抽象劳动分别反应了劳动的不同属性。具体劳动所反映的是人与自然的关系，是劳动的自然属性，抽象劳动反应的是人与社会的关系，是劳动的社会属性
+
+
+
+3.商品价值量
+
+* 社会必要劳动时间决定商品价值量
+* 社会必要劳动时间是指在现有的社会正常的生产条件下，在社会平均的劳动熟练程度和劳动强度下制造某种使用价值所需要的劳动时间
+* 商品的价值量与生产商品所耗费的**社会必要劳动时间成正比，与劳动生产率成反比**
+
+
+
+4.价值形式的发展与货币的产生
+
+* 商品价值形式的发展经历的四个阶段
+  * 简单或偶然的价值形式
+  * 总和的或扩大的价值形式
+  * 一般价值形式
+  * 货币形式
+
+5.货币的五种职能
+
+* 价值尺度
+* 流通手段
+* 支付手段
+* 贮藏手段
+* 世界货币
+
+6.价值规律及其作用
+
+* 价值规律是商品生产和交换的基本规律
+  * 内容：
+    * 商品的价值量由生产商品的社会平均必要劳动时间决定。商品交换以价值量为基础，按照等价(等价值)交换的原则
+  * 表现形式：
+    * 商品的价格围绕商品的价值自发的波动
+  * 作用：
+    * 积极作用：
+      * 自发地调节生产资料和劳动力在社会各生产部门之间的分配比例
+      * 自发地刺激社会产出力的发展
+      * 自发地条件社会收入的分配
+    * 消极作用：
+      * 价值规律调节的自发性和滞后性可能导致社会资源的浪费
+      * 导致垄断发生，阻碍技术进步
+      * 导致收入两极分化
+
+* 在现实生活中，价值规律对生产和交换活动的支配作用是通过价格运动表现出来的。按照价值规律的要求，商品价格的确定是以商品价值为基础的。但是，这并不意味着每一次具体的商品交换都是等价交换。商品供求关系的不平衡，使得商品的价格与价值经常不一致，但这不仅不违背价值规律，相反正是价值规律发生作用的表现形式。其原因在于： 
+  * 从商品交换的总体和较长时期来看，**价格的上涨部分和下落部分可以相互抵消**，因而一定时期之内商品的平均价格与价值是相等的， 价格与价值是趋于一致的； 
+  * 从不同商品各自的价格变动来看，商品的市场价格无论怎样变动，都是以各自的价值为基础变动的，各种商品之间总有一定的比价。因此，在商品交换中，受供求关系的影响，商品价格围绕价值自发地上下波动既不是无限地上涨，也不是无限地下跌，**商品价格归根到底要受价值制约**；只有通过商品价格的波动，商品按照社会必要劳动时间决定的价值量进行交换才成为现实
+
+
+
+7.以私有制为基础的商品经济的基本矛盾
+
+* 商品生产者的劳动：
+  * 以私有制为基础的商品经济中，商品生产者的劳动既是具有社会性质的**社会劳动，这是由社会分工决定的**；又是具有私人性质的**私人劳动，这是由生产资料私有制决定的**
+* 私有制经济的基本矛盾：
+  * **私人劳动和社会劳动的矛盾**构成私有制商品经济的**基本矛盾**，这一矛盾贯穿商品经济发展过程的始终，决定商品经济的各种内在矛盾及其发展趋势。
+    * 私人劳动和社会劳动的矛盾**决定着商品经济的本质及其发展过程**
+    * 私人劳动和社会劳动的矛盾**是商品经济其他一切矛盾的基础**
+    * 私人劳动和社会劳动的矛盾**决定着商品生产者的命运**
+* 商品拜物教产生的必然性
+  * 生产者的劳动关系的社会性质只有采取商品之间，即物与物之间相交换的形式才能简介地表现出来，就使人与人之间一定的社会关系被物与物的关系所掩盖
+
+8.科学认识马克思主义劳动价值论
+
+![image-20231221215338290](https://img-blog.csdnimg.cn/direct/7a52dce551104ba9b3a1ed3962f720d7.png)
+
+
+
+ 9.**劳动力成为商品与货币转化为资本**
+
+* 劳动力成为货币
+  * 劳动力是指人的劳动能力，人的脑力和体力的总和。劳动力成为商品，**标志着简单商品生产发展到资本主义商品生产的新阶段**
+  * 劳动力成为货币的两个基本条件
+    * 劳动者是法律上的自由人，能够把自己的劳动力当做商品来支配
+    * 劳动者没有任何生产资料，没有生活资料来源，因而不得不依靠出卖劳动力为生
+* 劳动力商品的特点
+  * 劳动力价值包括三个部分
+    * 维持劳动者生存所必须的生活资料的价值
+    * 维持劳动者家属的生存所必须的生活资料的价值
+    * 劳动者接受教育和训练所指出的费用
+  * 劳动力商品咋及使用价值上的一个突出特点：**它的使用价值是价值的源泉**
+* 货币转换为资本
+  * 货币转换为资本的条件，**是用货币购买劳动力商品带来剩余价值**
+
+
+
+10.**生产剩余价值是资本主义生产方式的绝对规律**
+
+* 剩余价值的生产过程
+  * 剩余价值是在资本主义生产过程中生产出来的，这一过程具有**两重性，即劳动过程和价值增值过程的统一**
+  * 劳动过程：
+    * 是运用劳动资料对劳动对象进行加工，改变自然界的物质形态，创造出满足人们某种需要的使用价值的过程。包括三要素：
+      * 劳动者的劳动、劳动对象和劳动资料
+  * 价值增值过程是超过劳动力价值的补偿点而延长了价值形成过程
+* 剩余价值率
+  * 资本在剩余价值中采取生产资料和劳动力两种形态，根据这两部分资本在剩余价值中所起的不同作用，可以将资本区分为：
+    * 不变资本(c)，是指**以生产资料形式存在的资本**。其在生产过程中只转变自己的物质形态而不改变自己的价值量，不发生增值
+    * 可变资本(v)，是用**来购买劳动力的那部分资本**，在生产过程中，工人能够创造新的价值，发生价值增值
+  * **雇佣劳动者的剩余劳动是剩余价值的唯一源泉**
+  * 确定资本家对工人的剥削程度：
+    * m' = m / v
+      * m' 为剩余价值率，m为剩余价值，v为可变资本
+    * 剩余价值率还可以用剩余劳动与必要劳动的比率，或者剩余劳动时间或与必要劳动时间的比率来表示
+    * m' = 剩余劳动时间 / 必要劳动时间 = 剩余劳动 / 必要劳动
+* 剩余价值生产的基本方法
+  * **绝对剩余价值的产生**
+    * 必要劳动时间不变的条件下，由于**工作日的绝对延长**或**提高劳动强度**而进行的剩余价值生产
+  * 相对剩余价值的生产
+    * 在工作日长度不变时，由于缩短必要劳动时间，**相应延长剩余劳动时间而进行的剩余价值生产**
+      * 缩短必要劳动实践是通过全社会劳动生产率的提高实现的
+      * 全社会劳动生产率的提高是资本家追逐超额剩余价值的结果
 
 
 
