新增马原知识点

--- a/毛概/毛概期末.md
+++ b/毛概/毛概期末.md
@@ -264,13 +264,13 @@
 * 1992年邓小平在南方谈话中指出：
   * **社会主义本质**是解放生产力，发展生产力，消灭剥削，消除两极分化，最终达到共同富裕
 * 内容
-  * 它突出强调了解放和发展生茶里在社会主义社会发展的重要地位，纠正了过去关于发展生产力的一些错误观念
+  * 它突出强调了解放和发展生产力在社会主义社会发展的重要地位，纠正了过去关于发展生产力的一些错误观念
   * 它突出强调了消灭剥削，消除两极分化，最终达到共同富裕
 
 2.邓小平理论精髓（解放思想和实事求是的**辩证统一**）
 
 * **解放思想，实事求是**
-* 只有解放思想才能达到实事求是，只有实事求是惨呢是真正的解放思想
+* 只有解放思想才能达到实事求是，只有实事求是才能真正的解放思想
 * 解放思想包含两种情况
   * 对原先认识的事情再认识，对正确的坚持和对错误的纠正
   * 研究新情况，解决新问题，总结新经验，形成新的正确认识
