--- a/马原/马原.md
+++ b/马原/马原.md
@@ -1,112 +1,6 @@
 # 马原
 
-## 导论
-
-* 什么是**马克思主义**？
-
-> 马克思主义是关于**自然、社会和人类思维发展一般规律**的学说，
->
-> 是关于**社会主义必然替代资本主义、最终实现共产主义**的学说，
->
-> 是关于**无产阶级解放**、**全人类解放**和**每个人自由而全面发展**的学说
->
-> 是无产阶级政党和社会主义国家的指导思想，
->
-> 是指引**人民创造美好生活**的行动指南
-
-* 马克思主义的三个组成体系
-
-> 马克思主义哲学
->
-> 马克思主义政治经济学
->
-> 科学社会主义
-
-* 马克主义的立场、基本观点和基本方法
-  * 立场：以无产阶级的解放和全人类的解放为己任，以人的自由而全民发展为美好目标，以人民为中心，坚持一切为了任命、一切依靠人民，全心全意为人民服务
-  * 观点：是关于自然、社会和人类思维发展的一般规律的科学认知
-  * 方法：建立在辩证唯物主义和历史唯物主义世界观和方法论基础上
-
-* 马克思主义的创立
-
-> * 社会根源
->   * 资本主义生产方式在西欧已经有了相当的发展，造成两极分化
-> * 阶级基础
->   * **无产阶级**在反抗资产阶级的剥削和压迫的斗阵中，逐步走向自觉，并迫切渴望科学的理论指导
-> * 思想渊源
->   * **西欧三大先进思潮**为马克思主义的创立提供了直接的理论来源
->     * 德国古典哲学、英国古典政治经济学、英法两国的空想社会主义
-
-* 马克思主义的**鲜明特征**
-
-> **科学性、人民性、实践性、发展性**
-
-## 第一章 世界的物质性及发展规律
-
-### 1.世界多样性与物质统一性
-
-* 本源：
-  * 所有存在物种共有的
-
-#### 物质
-
-> 物质是标志客观实在性的哲学范畴，**有且仅有客观实在性**
->
-> 物质不是物质的具体存在形态
-
-* **马克思主义的物质范畴的理论意义**
-
-> 1.坚持了**唯物主义一元论**，同唯心主义一元论和二元论划清了界限
->
-> 2.坚持了**能动的反映论和可知论**，批判了不可知论
->
-> 3.体现了**唯物论和辩证法的统一**，克服了形而上学唯物主义的缺陷
->
-> 4.体现了**唯物主义自然观与唯物主义历史观的统一**，为彻底的唯物主义奠定了理论接触
-
-* 物质的**根本属性**：
-
-> **运动**
-
-* 物质和运动的关系
-
-> * 运动是标志一切事物和现象的变化及其过程的哲学范畴
-> * 物质和运动是不可分割的。**运动是物质的运动，物质是运动着的物质**
-> * 物质世界的**运动是绝对的**，而物质在运动过程中又有某种**相对的静止**
-
-* 相对静止是物质运动在一定条件下的稳定状态，具体包括两种状态
-  * 空间的相对位置暂时不变
-  * 事物的根本性质暂时不变
-* **运动和静止的联系**
-
-> 运动和静止**相互依赖**、**相互渗透**、**相互包含**
->
-> **动中有静、静中有动**
->
-> **无条件的绝对运动**和**有条件的相对静止**构成了**对立统一**的关系
-
-* 运动着的物质的**基本存在形式：**
-
-> **时间**和**空间**
->
-> * 时间是指物质运动的持续性、顺序性
->   * 特点：一维性。时间一去不复返
-> * 空间是指物质运动的广延性、伸张性
->   * 特点：三维性。空间具有长宽高三方面的规定性
-
-​	物质运动与时间和空间的不可分割，证明了时间和空间的客观性。
-
-​	具有物质形态的时空是有限的，而整个物质世界的时空是无限的
-
-
-
-
-
-
-
-
-
-## 期末复习
+## 简答题
 
 **《马克思主义基本原理》期末复习指南**
 
@@ -559,13 +453,15 @@
     * 三个基本组成部分：
       * 马克思主义哲学、马克思主义政治经济学和科学社会主义
     * 其他还包含着例如历史学、政治学、法学、文化学、新闻学等
-  * 马克思主义基本原理？
+  * **马克思主义基本原理？**
     * 基本立场
       * 以无产阶级解放，全人类解放为己任，以人的自由而发展为美好目标，以人民为中心，坚持一切为了人民，一切依靠人民，全心全意为人民服务
     * 基本观点
       * 马克思主义的基本观点是关于自然、社会、人类思维发展一般规律的科学认识，是对人类思想成果和社会实践经验的科学总结
     * 基本方法
       * 建立在**辩证唯物主义和历史唯物主义世界观和方法论基础上**，指导我们正确认识世界和改造世界的思想方法。包括**实事求是**的方法、**辩证分析**的方法、**社会基本矛盾**和**主要矛盾分析**的方法、历史分析的方法、阶级分析的方法、**群众路线**的方法等
+
+  ![image-20231222124726771](https://img-blog.csdnimg.cn/direct/f4aa8000c1354411ada558901f8a3618.png)
 
 * 马克思主义的创立条件
 
@@ -591,6 +487,7 @@
   ![image-20231217152123232](https://img-blog.csdnimg.cn/direct/6ff9f93bf9da42c7a057e35a20de3311.png)
 
 * **马克思主义的当代价值**
+  
   * **观察当代世界变化的认识工具**
   * **指引当代中国发展的行动指南**
   * **引领人类社会进步的科学真理**
@@ -1313,13 +1210,130 @@
       * m' 为剩余价值率，m为剩余价值，v为可变资本
     * 剩余价值率还可以用剩余劳动与必要劳动的比率，或者剩余劳动时间或与必要劳动时间的比率来表示
     * m' = 剩余劳动时间 / 必要劳动时间 = 剩余劳动 / 必要劳动
-* 剩余价值生产的基本方法
+* **剩余价值生产的基本方法**
   * **绝对剩余价值的产生**
     * 必要劳动时间不变的条件下，由于**工作日的绝对延长**或**提高劳动强度**而进行的剩余价值生产
-  * 相对剩余价值的生产
+  * **相对剩余价值的生产**
     * 在工作日长度不变时，由于缩短必要劳动时间，**相应延长剩余劳动时间而进行的剩余价值生产**
       * 缩短必要劳动实践是通过全社会劳动生产率的提高实现的
       * 全社会劳动生产率的提高是资本家追逐超额剩余价值的结果
+
+
+
+11.资本积累
+
+* 剩余价值资本化，就是资本积累
+
+* **资本主义简单再生产**
+
+  * 资本家瓜分到剩余价值后，如果将其完全用于个人消费，则**生产就在原有规模的基础上重复进行**，即称资本主义简单再生产
+  * 实质而言，资本主义简单再生产是物质资料再生产和资本主义生产关系再生产的统一
+
+* **资本主义扩大再生产**
+
+  * 资本家获得无偿占有的剩余价值后，**并不是将其完全用于个人消费，而是将一部分部分转化为资本**，用以购买追加的生产资料和劳动力，使生产在扩大的规模上重复进行。这就是资本主义扩大再生产。资本积累是资本主义扩大再生产的源泉
+
+* 资本积累的源泉是剩余价值，资本积累规模的大小取决于：a．资本家对工人的剥削程度；b．劳动生产率的高低；c．所用资本和所费资本之间的差额；d．资本家预付资本的大小。
+
+* 资本积累造成社会财富两级分化，并导致社会失业现象
+
+  * 资本的构成
+
+  ![image-20231222095544141](https://img-blog.csdnimg.cn/direct/1a19e317093948c9b0e02d8eef6f15f4.png)
+
+
+
+12.资本的循环周转与再生产
+
+* 资本循环
+
+  * 资本循环是资本从一种形式出发，经过一系列形式的变化，又回到原来出发点的运动
+  * 阶段
+    * 第一个阶段为**购买阶段**，即生产资料和劳动力购买阶段
+    * 第二个阶段是**生产阶段**，即生产资料与劳动力按比例结合在一起从事资本主义生产的阶段
+    * 第三个阶段是**售卖阶段**，商品资本向货币资本的转化阶段
+  * 职能
+    * 第一阶段执行**货币资本**的职能
+    * 第二阶段执行**生产资本**的职能
+    * 第三阶段执行**货币资本**的职能
+
+* 资本循环的前提条件
+
+  * 产业资本的产业职能形式必须在**空间上并存**
+  * 产业资本的三种职能形式必须在**时间上继起**
+  * 这表明产业资本的连续循环是**流通过程**和**生产过程**的统一，也是货币资本循环，生产资本循环和商品资本循环三种职能形式的统一
+
+* 社会总资本和再生产和流通
+
+  * **社会总产品(社会总价值)**
+    * 价值形态：
+      * 在产品中的**生产资料的转移价值(c)**
+      * 凝结在资产中的**由工人必要劳动创造的价值(v)**
+      * 凝结在产品中由工人**在剩余劳动时间里创造的价值(m)**
+    * 物质形态
+      * 社会总产品可分为用于生产性消费的生产资料和用于生活消费的生活资料
+
+  * **社会生产**
+    * 类型
+      * 第一部类 生产资料生产部类
+      * 第二部类 消费资料生产部类
+    * 条件
+      * 社会在生产的顺利进行，要求生产中所耗费的资本在价值上得到补偿，同时要求实际生产过程中所耗费的生产资料和消费资料得到实物的替换。
+      * 两大部类内部各个生产部门之间和**两大部类之间保持一定的比例关系**，社会再生产才能顺利进行
+
+13.工资与剩余价值的分配
+
+![image-20231222103452908](https://img-blog.csdnimg.cn/direct/b31e0c4caa744eeca478e09ffa6650ce.png)
+
+14.剩余价值理论的意义
+
+* **深刻揭露了资本主义生产关系的剥削本质**，阐明了资产阶级与无产阶级之间阶级斗争的经济根源，指出无产阶级革命的必然历史性
+* 是**马克思主义经济理论的基石**，是无产阶级反对资产阶级，揭示资本主义制度剥削本质的锐利武器，由于**唯物史观和剩余价值的发现，社会主义由空想变为科学**
+
+
+
+15.资本主义基本矛盾和经济危机
+
+* **基本矛盾：**生产社会化和生产资料资本主义私人占有之间的矛盾
+
+* 经济危机
+
+  * 实质：
+    * 生产过剩，但这种过剩是相对过剩，即相对于劳动人民有支付能力的需求来说商品相对过剩，而不是与劳动人民的实际需要相比的绝对过剩
+  * 表现：
+    * 大量商品积压，大批生产企业减产提供，经融机构倒闭
+  * 爆发的原因：
+    * 抽象的一般可能性：由**货币作为流通手段和支付手段引起的**
+    * 根本原因：资本主义的基本矛盾
+      * **生产无限扩大的趋势**与**劳动人民有支付能力的需求相对缩小**的矛盾
+      * **单个企业内部生产的有组织性**和**整个社会生产的无政府**状态之间的矛盾
+  * 爆发特点
+    * 具有周期性，这是由资本主义基本矛盾的阶段性决定的
+    * 四个阶段：危机、萧条、复苏和高涨。四个阶段相互联系的，危机是必经阶段
+
+  
+
+16.资本主义政治制度及其本质
+
+![image-20231222110120936](https://img-blog.csdnimg.cn/direct/1d95a79eb894414e932d1dac00e1a0f7.png)
+
+* 对资本主义的辩证态度
+
+![image-20231222110211136](https://img-blog.csdnimg.cn/direct/e25f38f8753f4edeac5041176bffe2d8.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
